--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    background-color: #f2f2f2;
 }
 
 a {
@@ -48,4 +49,21 @@ a {
 
 .logo-banner img {
     height: 120px;
+}
+
+.form-inputs {
+    background-color: white;
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+}
+
+.row {
+    display: flex;
+}
+
+label, input {
+    display: block;
 }
